# shopkeeper

./: .dockerignore  .earthlyignore  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc.mjs  Dockerfile  Earthfile  LICENSE  alembic.ini  components.json  dev-requirements.in  dev-requirements.txt  openapi-codegen.config.ts  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/: .env.example  deploying.md  docker-compose.yml
frontend/: index.html
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/lib/: state.ts  utils.ts
frontend/src/routes/: Listings.tsx  Root.tsx  __root.tsx  index.tsx
shopkeeper/: __main__.py  bot.py  config.py  db.py
shopkeeper/cmd/: __init__.py  utils.py
shopkeeper/features/: __init__.py  create.py  edit.py
shopkeeper/migrations/: env.py
shopkeeper/migrations/versions/: 058dd12f0004_add_is_hidden_column_to_listing_listing_.py  0e27ae9d8373_create_listing_event_model.py  137eb0d399ee_add_height_width_columns_to_thumbnails.py  1acae44de005_add_price_field_to_listing.py  218dc344cc2d_create_listing_model.py  56afda00cb15_.py  729844398f3f_make_description_and_price_non_nullable.py  bff5d7d03989_add_listing_images.py  bff5d7d03989_temp_listing_image_migration.py  d280c2602978_create_listing_model.py  e59925c3e88c_create_listing_model.py  (+1 more)
shopkeeper/models/: _all_models.py  listing.py  listing_event.py  listing_image.py
shopkeeper/web/: app.py
(+41 files in other folders)
