[project]
name = "shopkeeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.20.0",
    "alembic==1.13.1",
    "audioop-lts==0.2.1",
    "authlib==1.4.0",
    "discord-py==2.4.0",
    "fastapi==0.115.6",
    "pillow==10.4.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "sqlalchemy[asyncio]==2.0.36",
    "starlette[full]==0.41.3",
    "typer==0.12.3",
    "uvicorn==0.30.1",
]

[dependency-groups]
dev = [
    "ruff==0.3.2",
]
